# laserembeddings

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  pylintrc  pyproject.toml
.github/workflows/: python-package.yml
laserembeddings/: __init__.py  __main__.py  embedding.py  encoder.py  laser.py  preprocessing.py  utils.py
tests/: conftest.py  test_embedding.py  test_laser.py  test_preprocessing.py  test_utils.py
tests/report/: comparison-with-LASER.md  comparison-with-LASER2.md
