[tool.poetry]
name = "laserembeddings"
version = "1.1.2"
description = "Production-ready LASER multilingual embeddings"
authors = ["yannvgn <hi@yannvgn.io>"]
license = "BSD-3-Clause"
homepage = "https://github.com/yannvgn/laserembeddings"
repository = "https://github.com/yannvgn/laserembeddings"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.2"
torch = "^1.0.1.post2"
subword-nmt = "^0.3.6"
numpy = "^1.15.4"
sacremoses = "0.0.35"
transliterate = "1.10.2"
mecab-python3 = { version = "^1.0.1", optional = true }
ipadic = { version = "1.0.0", optional = true }
jieba = { version = "^0.42.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^4.6"
yapf = "^0.27.0"
pylint = "^2.3"

[tool.poetry.extras]
zh = ["jieba"]
ja = ["mecab-python3", "ipadic"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
